Fix message and add test